--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,12 @@ services:
       - ./bot/config.yml:/app/config.yml:ro
       - ./bot/requirements.txt:/app/requirements.txt:ro
     depends_on:
-      - mysql
-      - lavalink
+      mysql:
+        condition: service_started
+      lavalink:
+        condition: service_started
+      api:
+        condition: service_healthy
     networks:
       - api
       - lavalink
@@ -23,6 +27,11 @@ services:
     networks:
       - backend
       - api
+    healthcheck:
+      test: wget --no-verbose --tries=1 --spider http://localhost:8000/healthcheck || exit 1
+      interval: 300s
+      start_period: 5s
+      start_interval: 3s
   # MySQL Server
   mysql:
     image: "mysql/mysql-server:8.0"
