--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,6 @@ services:
       - ./bot/config.yml:/app/config.yml:ro
       - ./bot/requirements.txt:/app/requirements.txt:ro
     depends_on:
-      mysql:
-        condition: service_started
       lavalink:
         condition: service_started
       api:
@@ -23,14 +21,15 @@ services:
     env_file:
       - ./api/.env
     depends_on:
-      - mysql
+      mysql:
+        condition: service_healthy
     networks:
       - backend
       - api
     healthcheck:
       test: wget --no-verbose --tries=1 --spider http://localhost:8000/healthcheck || exit 1
-      interval: 300s
-      start_period: 5s
+      interval: 5s
+      start_period: 2s
       start_interval: 3s
   # MySQL Server
   mysql:
