--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "api"]
 	path = api
 	url = https://github.com/MasterOfCubesAU/mocbot-api
+[submodule "website"]
+	path = website
+	url = https://github.com/MasterOfCubesAU/mocbot-website
