--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       - lavalink
   # MOCBOT API
   api:
-    build: ./api/
+    build: ./api
     restart: unless-stopped
     env_file:
       - ./api/.env
@@ -31,6 +31,19 @@ services:
       interval: 5s
       start_period: 2s
       start_interval: 3s
+  # MOCBOT Website
+  website:
+    build: ./website
+    restart: unless-stopped
+    ports:
+      - 80:3000
+    env_file:
+      - ./website/.env
+    depends_on:
+      api:
+        condition: service_healthy
+    networks:
+      - api
   # MySQL Server
   mysql:
     image: "mysql/mysql-server:8.0"
