--- a/lavalink/application.template.yml
+++ b/lavalink/application.template.yml
@@ -3,6 +3,8 @@ server:
   address: 0.0.0.0
 lavalink:
   plugins:
+    - dependency: "dev.lavalink.youtube:youtube-plugin:1.5.0"
+      snapshot: false
     - dependency: "com.github.topi314.lavasrc:lavasrc-plugin:4.2.0"
       repository: "https://maven.lavalink.dev/releases"
       snapshot: false
@@ -24,6 +26,16 @@ lavalink:
     soundcloudSearchEnabled: true
     gc-warnings: true
 plugins:
+  youtube:
+    enabled: true
+    allowSearch: true
+    allowDirectVideoIds: true
+    allowDirectPlaylistIds: true
+    clients:
+      - MUSIC
+      - ANDROID_TESTSUITE
+      - WEB
+      - TVHTML5EMBEDDED
   lavasrc:
     providers:
       - 'ytsearch:"%ISRC%"'
@@ -31,7 +43,6 @@ plugins:
     sources:
       spotify: true
       applemusic: false
-      youtube: true
     spotify:
       clientId: null
       clientSecret: null
